--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,2 @@
-VITE_API_URL=http://localhost:5000/api
+VITE_API_URL=https://api-dashboard-monitoring-backend.onrender.com
 VITE_API_KEY=1234abcd5678
